# password-generator-pro

./: .deepsource.toml  .eslintcache  .eslintrc  .gitignore  .prettierrc  COPYRIGHT  COPYRIGHT.md  LICENSE  LICENSE-APACHE  Makefile  README.md  TEMPLATE.md  index.html  makefile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.cargo/: config
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  funding.yml
.github/workflows/: audit.yml  build.yml  check.yml  ci.yaml  lint.yml  publish.yml  release.yml  rust.yml
docker/: Dockerfile.aarch64  Dockerfile.arm64  Dockerfile.armv7
public/: manifest.json
src/: App.svelte  index.ts  main.ts
src-tauri/: .config.mk  Cargo.toml  Cross.toml  Makefile  Makefile.config.in  Makefile.log.in  Makefile.toml  README.md  build.rs  cobertura.xml  config.mk  default_11125040783846898452_0_56160.profraw  default_12318032271213365245_0_56160.profraw  default_13034879364376267074_0_56110.profraw  default_13034879364376267074_0_56160.profraw  default_14100835831305355725_0_56110.profraw  default_14100835831305355725_0_56160.profraw  default_14270007360392308421_0_56110.profraw  default_14270007360392308421_0_56160.profraw  default_14649022287812900065_0_56110.profraw  default_14649022287812900065_0_56160.profraw  default_1479411817168770374_0_56160.profraw  default_4959029876149492532_0_56110.profraw  default_4959029876149492532_0_56160.profraw  default_6264025570096389287_0_56110.profraw  default_6264025570096389287_0_56160.profraw  default_9089106606593530244_0_56110.profraw  default_9089106606593530244_0_56160.profraw  default_913345845510032889_0_56110.profraw  default_913345845510032889_0_56160.profraw  default_9347348357024060792_0_56110.profraw  default_9347348357024060792_0_56160.profraw  entitlements.plist  rust-toolchain.toml  rustfmt.toml  tauri.conf.json  tree.txt
src-tauri/assets/: com-sebastienrousseau-password-generator-pro.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: consts.rs  date.rs  logger.rs  main.rs  menu.rs  mod.rs  system_tray.rs  tray.rs  words.rs
src-tauri/src/core/: commands.rs  constants.rs  consts.rs  logger.rs  menu.rs  mod.rs  time.rs  tray.rs  uuid.rs  website.rs  words.rs
src-tauri/src/util/: constant.rs  date.rs  logger.rs  qrcode.rs  uuid.rs
src-web/: App.svelte
src-web/Components/: i18n.ts
src-web/Icon/: CopyIcon.svelte
src-web/Locales/: ar-AE.json  bg-BG.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-GB.json  es-ES.json  fi-FI.json  fr-FR.json  hr-HR.json  hu-HU.json  id-ID.json  it-IT.json  iv-IV.json  ja-JP.json  ko-KR.json  lt-LT.json  nl-NL.json  pl-PL.json  pt-BR.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sp-SP.json  sv-SE.json  th-TH.json  tr-TR.json  uk-UA.json  zh-CN.json
src/Components/: i18n.ts
src/Components/I18n/: i18n.ts
src/Components/Theme/: theme.json  theme.ts
src/Locales/: ar-AE.json  bg-BG.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-GB.json  es-ES.json  fi-FI.json  fr-FR.json  hr-HR.json  hu-HU.json  id-ID.json  it-IT.json  iv-IV.json  ja-JP.json  ko-KR.json  lt-LT.json  nl-NL.json  pl-PL.json  pt-BR.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sp-SP.json  sv-SE.json  th-TH.json  tr-TR.json  uk-UA.json  zh-CN.json
src/lib/: GenerateIcon.svelte  ResetIcon.svelte
webapp/: App.svelte
webapp/Locales/: ar-AE.json  bg-BG.json  da-DK.json  el-GR.json  en-GB.json  es-ES.json  fi-FI.json  fr-FR.json  hr-HR.json  hu-HU.json  ja-JP.json  ko-KR.json  lt-LT.json  nl-NL.json  pl-PL.json  pt-BR.json  ro-RO.json  ru-RU.json  sk-SK.json  sp-SP.json
