[package]
authors = ["Sebastien Rousseau"]
build = "build.rs"
default-run = "password-generator-pro"
description = "A Fast, Simple And Powerful Password Generator"
edition = "2021"
homepage = "https://github.com/sebastienrousseau/password-generator-pro"
keywords = ["password", "generator"]
license = "MIT OR Apache-2.0"
name = "password-generator-pro"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/password-generator-pro"
rust-version = "1.65.0"
version = "0.0.1"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
bcrypt = "0.13.0"
chrono = "0.4.23"
convert_case = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
sys-locale = "0.2.3"
tauri = { version = "1.2.2", features = ["clipboard-all", "dialog-all", "icon-ico", "icon-png", "system-tray", "window-set-icon"] }
time = "0.3.17"
webbrowser = "0.8.2"
wry = "0.23.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[package.metadata.bundle]
name = "Password Generator Pro"
identifier = "com.sebastienrousseau.password-generator-pro"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
debug = false # Disable debug information
incremental = false # Disable incremental compilation
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
panic = "abort" # Strip expensive panic clean-up logic
strip = "symbols"  # Automatically strip symbols from the binary.

# Optimize these packages for perf
[profile.release.package.flate2]
opt-level = 3
[profile.release.package.chrono]
opt-level = 3
[profile.release.package.bcrypt]
opt-level = 3
[profile.release.package.rand]
opt-level = 3
[profile.release.package.sys-locale]
opt-level = 3
[profile.release.package.webbrowser]
opt-level = 3

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/password-generator-pro", dest = "/usr/bin/password-generator-pro", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/password-generator-pro/LICENSE", doc = true, mode = "0644" }
    # { source = "README.md", dest = "/usr/share/doc/password-generator-pro/README.md", doc = true, mode = "0644" }
]
license = "MIT OR Apache-2.0"
name = "password-generator-pro"
version = "0.0.1"

[package.metadata.deb]
copyright = "© Password Generator Pro 2022. All rights reserved"
maintainer = "Sebastien Rousseau"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
