[package]
authors = ["Sebastien Rousseau"]
build = "build.rs"
categories = [
    "cryptography",
    "text-processing"
]
default-run = "password-generator-pro"
description = "A Fast, Simple And Secure Password Generator"
edition = "2021"
homepage = "https://password-generator.pro"
keywords = [
    "open-source",
    "password-generator",
    "password-protection",
    "secure-password",
    "rust-password-generator",
]
license = "MIT OR Apache-2.0"
name = "password-generator-pro"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/password-generator-pro"
rust-version = "1.57"
version = "0.0.3"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
vergen = { version = "7.4.3", features = [] }

[dependencies]
bcrypt = "0.13.0"
clipboard = "0.5.0"
convert_case = "0.6.0"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "bmp", "ico"] }
qrcode = "0.12.0"
rand = "0.8.5"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
svg = "0.13.0"
tauri = { version = "1.2.3", features = ["clipboard-all", "dialog-all", "icon-ico", "icon-png", "system-tray", "window-set-icon"] }
time = "0.3.17"
webbrowser = "0.8.2"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[package.metadata.bundle]
name = "Password Generator Pro"
identifier = "com.sebastienrousseau.password-generator-pro"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
debug = false # Disable debug information
incremental = false # Disable incremental compilation
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
panic = "abort" # Strip expensive panic clean-up logic
strip = "symbols"  # Automatically strip symbols from the binary.

# Optimize these packages for perf
[profile.release.package.flate2]
opt-level = 3
[profile.release.package.bcrypt]
opt-level = 3
[profile.release.package.rand]
opt-level = 3
[profile.release.package.webbrowser]
opt-level = 3
